# MetaRender

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  vcpkg.json
.zed/: tasks.json
config/: config.json
src/app/: main.cpp
src/metarender/config/: Config.cpp  Config.hpp
src/metarender/core/: AssetManager.cpp  AssetManager.hpp  Engine.cpp  Engine.hpp  ServiceLocator.hpp  TextureData.hpp  Time.cpp  Time.hpp
src/metarender/event/: Event.hpp  EventBus.hpp  WindowEvents.hpp
src/metarender/input/: InputManager.cpp  InputManager.hpp  KeyCodes.hpp  KeyCodes.inc
src/metarender/log/: Log.hpp
src/metarender/platform/: Window.cpp  Window.hpp
src/metarender/renderer/: GLRenderer.cpp  GLRenderer.hpp  IRenderer.hpp
src/metarender/scene/: IScene.hpp  SceneManager.cpp  SceneManager.hpp
src/metarender/ui/: UIManager.cpp  UIManager.hpp
src/scenes/: Sandbox.cpp  Sandbox.hpp
src/scenes/nehe/: Lesson02.cpp  Lesson02.hpp  Lesson03.cpp  Lesson03.hpp  Lesson04.cpp  Lesson04.hpp  Lesson05.cpp  Lesson05.hpp  Lesson06.cpp  Lesson06.hpp  Lesson07.cpp  Lesson07.hpp  Lesson08.cpp  Lesson08.hpp  Lesson09.cpp  Lesson09.hpp  Lesson10.cpp  Lesson10.hpp  Lesson11.cpp  Lesson11.hpp  Lesson12.cpp  Lesson12.hpp  Lesson13.cpp  Lesson13.hpp  Lesson14.cpp  Lesson14.hpp  Lesson15.cpp  Lesson15.hpp
